--- a/index.html
+++ b/index.html
@@ -103,8 +103,45 @@
         </section>
 
         <!--~~~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~~-->
-        <div>
-
+        <div class="bg-white text-green-900 py-20 ">
+<div class=" grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-8 w-11/12 mx-auto">
+    <!-- card-1 -->
+    <div class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-4">
+        <div class="flex items-center gap-5">
+            <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+            <p class="md:text-lg font-bold">Fast <br>
+                Delivery</p>
+        </div> 
+        <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+    </div>
+    <!-- card-2 -->
+    <div class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-4">
+        <div class="flex items-center gap-5">
+            <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+            <p class="md:text-lg font-bold">Fast <br>
+                Delivery</p>
+        </div> 
+        <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+    </div>
+    <!-- card-3 -->
+    <div class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-4">
+        <div class="flex items-center gap-5">
+            <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+            <p class="md:text-lg font-bold">Fast <br>
+                Delivery</p>
+        </div> 
+        <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+    </div>
+    <!-- card-4 -->
+    <div class="border border-green-900 p-5 cursor-pointer rounded-md hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-4">
+        <div class="flex items-center gap-5">
+            <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+            <p class="md:text-lg font-bold">Fast <br>
+                Delivery</p>
+        </div> 
+        <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+    </div>
+</div>
         </div>
 
         <!--~~~~~~~~~~~~~~~ About us ~~~~~~~~~~~~~~~-->
