--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div id="nav-menu" class="absolute top-0 min-h-[80vh] w-full lg:static lg:min-h-fit lg:w-auto lg:bg-transparent left-[-100%] overflow-hidden bg-green-950/80 flex justify-center items-center 
             backdrop-blur-sm duration-300 ">
                 <ul class="flex flex-col gap-8 lg:flex-row">
-                    <li><a class="nav-link" href="#home">Home</a></li>
-                    <li><a class="nav-link" href="#about">About</a></li>
-                    <li><a class="nav-link" href="#popular">Popular</a></li>
-                    <li><a class="nav-link" href="#review">Review</a></li>
+                    <li><a class="nav-link active" href="#home">Home</a></li>
+                    <li><a class="nav-link " href="#about">About</a></li>
+                    <li><a class="nav-link " href="#popular">Popular</a></li>
+                    <li><a class="nav-link " href="#review">Review</a></li>
                 </ul>
                 <div><img class="w-32 absolute bottom-0 lg:hidden -right-10" src="assets/img/leaf-1.png" alt=""></div>
                 <div><img class="w-32 absolute top-0 lg:hidden -left-5 rotate-90 opacity-90" src="assets/img/leaf-2.png"
@@ -497,7 +497,9 @@
     </footer>
 
     <!--~~~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~~-->
-
+<a class="fixed right-4 bottom-4 bg-yellow-500 shadow-sm inline-block px-3 py-1 md:px-4 md:py-2 rounded-md text-lg z-50 hover:-translate-y-1 duration-300 " id="scroll-up" href="">
+    <i class="ri-arrow-up-line"></i>
+</a>
     <!--~~~~~~~~~~~~~~~ Swiper JS ~~~~~~~~~~~~~~~-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~-->
