--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                             your environment
                         </h1>
                         <p class="text-slate-300 font-Lobster">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus asperiores sed fuga iste
-                            culpa. Aliquid voluptate sit saepe eius rem ipsa nulla recusandae! Fugiat neque similique
-                            quibusdam praesentium repellat accusantium.
+                           Plants make a positive impact on your environment—boosting air quality, reducing stress, and enhancing your interior. We offer handpicked indoor plants, fast doorstep delivery, and real user reviews to help you green your space effortlessly.
 
                         </p>
                         <div class="flex flex-col gap-2 sm:flex-row md:gap-4 lg:pt-5 xl:pt-10">
@@ -123,9 +121,9 @@
                         <p class="md:text-lg font-bold">Fast <br>
                             Delivery</p>
                     </div>
-                    <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat
-                        quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+                    <p class="font-jost font-medium opacity-70">
+                        "We know how important freshness is when it comes to plants. That’s why we’ve built a delivery system that’s not only fast but also plant-friendly. Your selected greens are packed with care and shipped promptly, so they arrive healthy, vibrant, and ready to thrive in your space.
+                    </p>
                 </div>
                 <!-- card-2 -->
                 <div
@@ -135,9 +133,9 @@
                         <p class="md:text-lg font-bold">Great Customer <br>
                             Service</p>
                     </div>
-                    <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat
-                        quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+                    <p class="font-jost font-medium opacity-70">
+                        We believe great service grows trust. Our support team is here to help you every step of the way—from choosing the right plant to post-delivery care. Have a question or concern? We respond quickly, professionally, and always with a personal touch.
+                    </p>
                 </div>
                 <!-- card-3 -->
                 <div
@@ -147,9 +145,7 @@
                         <p class="md:text-lg font-bold">Affordable <br>
                             Price</p>
                     </div>
-                    <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat
-                        quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+                    <p class="font-jost font-medium opacity-70">We believe everyone deserves a greener space—without the high price tag. That’s why we offer a wide range of beautiful, healthy indoor plants at prices that fit your budget. Quality meets affordability in every pot we deliver.</p>
                 </div>
                 <!-- card-4 -->
                 <div
@@ -159,9 +155,7 @@
                         <p class="md:text-lg font-bold">Original <br>
                             Plants</p>
                     </div>
-                    <p class="font-jost font-medium opacity-70">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eaque, pariatur temporibus. Quibusdam doloribus quis ipsam, consectetur necessitatibus placeat
-                        quasi magnam laudantium unde distinctio officiis sed fugiat suscipit eius! Quam, rerum?</p>
+                    <p class="font-jost font-medium opacity-70">We don’t do fake—only real, living, and thriving plants make it to your home. Every plant in our collection is hand-selected, nurtured with care, and guaranteed to be 100% original and healthy. What you see is truly what you get.</p>
                 </div>
             </div>
         </div>
@@ -185,10 +179,7 @@
                             garden
                         </h3>
                         <p class="text-slate-300 font-Jost">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ratione rem maxime
-                            veniam cum libero voluptas tempora aut saepe similique, eos corporis. Expedita culpa
-                            consequatur animi deleniti ullam adipisci iure sequi dolores modi aliquam laudantium,
-                            explicabo nobis quia id reprehenderit.?
+                            Start your journey to a healthier lifestyle by creating your own organic garden at home. We provide handpicked plants and expert guidance to help you cultivate fresh, chemical-free greens right where you live.
                         </p>
                     </div>
                 </div>
@@ -205,10 +196,7 @@
                             your plant
                         </h3>
                         <p class="text-slate-300 font-Jost">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ratione rem maxime
-                            veniam cum libero voluptas tempora aut saepe similique, eos corporis. Expedita culpa
-                            consequatur animi deleniti ullam adipisci iure sequi dolores modi aliquam laudantium,
-                            explicabo nobis quia id reprehenderit.?
+                            Come with us and nurture your green journey. Together, we’ll help your plants grow strong, healthy, and full of life—bringing freshness and positivity to your home
                         </p>
                     </div>
                 </div>
@@ -332,9 +320,7 @@
                         <li class="swiper-slide">
                             <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti ea
-                                    commodi error eos vitae dolorem, esse sequi itaque officia fugiat voluptatem
-                                    voluptate temporibus suscipit mollitia ipsam hic deserunt beatae!
+                                    I love how easy it was to find beautiful indoor plants here! The delivery was super fast and the plants arrived healthy and well-packaged. The customer service team was very helpful when I had questions about care. Highly recommend!
                                 </p>
                                 <div class="flex items-center gap-3"><img class="w-12 h-12 rounded-full"
                                         src="assets/img/review-1.jpg" alt="">
@@ -351,9 +337,7 @@
                         <li class="swiper-slide">
                             <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti ea
-                                    commodi error eos vitae dolorem, esse sequi itaque officia fugiat voluptatem
-                                    voluptate temporibus suscipit mollitia ipsam hic deserunt beatae!
+                                    Great selection of plants at really affordable prices. I was impressed by how fresh the plants were upon arrival. The website is easy to navigate, and I appreciate the honest user reviews that helped me pick the perfect plants for my home
                                 </p>
                                 <div class="flex items-center gap-3"><img class="w-12 h-12 rounded-full"
                                         src="assets/img/review-2.jpg" alt="">
@@ -389,9 +373,7 @@
                         <li class="swiper-slide">
                             <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis corrupti ea
-                                    commodi error eos vitae dolorem, esse sequi itaque officia fugiat voluptatem
-                                    voluptate temporibus suscipit mollitia ipsam hic deserunt beatae!
+                                    Fantastic experience from start to finish! The delivery was quick, and my plants look amazing in my apartment. I also love the care tips provided—they made taking care of my new plants so much easier. Will definitely order again.
                                 </p>
                                 <div class="flex items-center gap-3"><img class="w-12 h-12 rounded-full"
                                         src="assets/img/review-4.jpg" alt="">
@@ -484,8 +466,8 @@
                 <p class="mb-5 font-bold text-xl">Contact Us</p>
                    <div class="flex flex-col gap-1">
                        <a href="#">+88 333 78 901</a>
-                       <a href="#">lightcodecamp@gmail.com</a>
-                       <a href="#">1234 Tailwind Ave, CSS City, Webland 56789, USA</a>
+                       <a href="#">sujanban223@gmail.com</a>
+                       <a href="#">CUET,Raojan,Pahartoli,Chattagram</a>
                    </div>
                </div>
             <!-- copyright -->
